# c5lesson11

./: .gitignore  README.md  main.py  output.md  pyproject.toml  sample_main.py  stock_tailing_eps.md  stock_tailing_eps.parquet  text_extract_from_image.py  ui.py
BACKUP/: exchange_rate.parquet  main.py  ocr.prompt  pyproject.toml
